# freenect2_matlab

./: CMakeLists.txt
include/: freenect2.h
matlab/: FrameType.m  Freenect2.m  PipelineType.m  main.m  test_freenect2.m
src/: freenect2.cpp
